[tool.poetry]
name = "labrador-sdk"
version = "0.1.0"
description = ""
authors = ["Geovane Fedrecheski <geonnave@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
#gpiod = "1.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
