[metadata]
name = caninos_sdk
version = attr: caninos_sdk.__version__
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
install_requires =
    typer
    rich
    gpiod
    pyserial

[options.extras_require]
# put pyserial, cv2 here
